refactor: 자바 버전업으로 인한 스트림 문법 수정