@@ -18,7 +18,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -45,7 +44,7 @@ public class BoardFacade {
 
         List<HashtagNameList> hashtagNameListByBoardList = boardList.stream()
                 .map(board -> boardHashtagService.getHashtagNameByBoardId(board.getBoardId()))
-                .collect(Collectors.toList());
+                .toList();
 
         return boardService.getBoardListByTrackId(boardList, hashtagNameListByBoardList);
     }
@@ -67,7 +66,7 @@ public class BoardFacade {
         /* Board 객체에 Hashtag 리스트를 찾아서 add 해주고 반환한다. */
         return beforeBoardList.stream().peek(board -> {
             board.addHashtagList(boardHashtagService.getHashtagNameByBoardId(board.getBoardId()));
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public Boolean isWriter(String boardId, Long userId) {
