@@ -15,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,7 +31,7 @@ public class FileService {
                     S3File s3File = addFileLevel(beforeS3File);
                     return s3File.toEntity();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         /* 변환한 엔티티 객체를 저장 */
         fileEntityList.forEach(fileEntity -> fileEntity.addBoard(board.toEntity()));
@@ -40,7 +39,7 @@ public class FileService {
 
         /* 캐싱 */
         fileRepository.saveCache(savedFileEntityList, CacheSpec.FILE);
-        return savedFileEntityList.stream().map(FileEntity::toFile).collect(Collectors.toList());
+        return savedFileEntityList.stream().map(FileEntity::toFile).toList();
     }
 
     @Transactional
@@ -49,15 +48,15 @@ public class FileService {
                 .map(s3File -> {
                     return s3File.setFileLevelToSub().toEntity();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         fileEntityList.forEach(fileEntity -> fileEntity.addBoard(board.toEntity()));
         List<FileEntity> savedFileEntityList= new ArrayList<>(fileRepository.saveAll(fileEntityList));
-        return savedFileEntityList.stream().map(FileEntity::toFile).collect(Collectors.toList());
+        return savedFileEntityList.stream().map(FileEntity::toFile).toList();
     }
 
     public List<File> getMainFileList(List<Board> boardList) {
-        List<String> boardIdList = boardList.stream().map(Board::getBoardId).collect(Collectors.toList());
+        List<String> boardIdList = boardList.stream().map(Board::getBoardId).toList();
         return getMainFileListByBoardId(boardIdList);
     }
 
@@ -87,7 +86,7 @@ public class FileService {
     }
 
     private List<File> getFileListByBoardId(String boardId) {
-        return fileRepository.findByStatusAndBoard_BoardIdOrderByFileId(FileStatus.POST, boardId).stream().map(FileEntity::toFile).collect(Collectors.toList());
+        return fileRepository.findByStatusAndBoard_BoardIdOrderByFileId(FileStatus.POST, boardId).stream().map(FileEntity::toFile).toList();
     }
 
     private List<FileEntity> getFileEntityListByBoardId(String boardId) {
@@ -96,7 +95,8 @@ public class FileService {
 
     private List<File> getMainFileListByBoardId(List<String> boardIdList) {
         return fileRepository.findByFileLevelAndStatusAndBoard_BoardIdIn(FileLevel.MAIN, FileStatus.POST, boardIdList)
-                .stream().map(FileEntity::toFile).collect(Collectors.toList());
+                .stream().map(FileEntity::toFile)
+                .toList();
     }
 
     private void setFileLevel(String boardId) {
@@ -110,7 +110,7 @@ public class FileService {
             List<Long> subFileIdList = fileEntityList.subList(1, fileEntityList.size())
                     .stream()
                     .map(FileEntity::getFileId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             fileRepository.updateFileLevel(subFileIdList, FileLevel.SUB);
         }
